<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/hello"/>

        <TextView
            android:id="@+id/tvappkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text=""/>

        <TextView
            android:id="@+id/tvappsecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text=""/>

        <TextView
            android:id="@+id/tvmastersecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text=""/>

        <TextView
            android:id="@+id/tvappid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text=""/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="clientid = "/>

            <TextView
                android:id="@+id/tvclientid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/no_clientid"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pmsg"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/pmsg"/>

            <Button
                android:id="@+id/btn_psmsg"
                android:layout_width="140dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/psmsg"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvloglabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="日志："/>

        <EditText
            android:id="@+id/tvlog"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="left"
            android:gravity="top|left"
            android:maxLines="100"
            android:text=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:text="@string/clear">
            </Button>

            <Button
                android:id="@+id/btn_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/stop">
            </Button>

            <Button
                android:id="@+id/btn_bind_alias"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/bind_alias"/>

            <Button
                android:id="@+id/btn_unbind_alias"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/unbind_alias"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddTag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:text="@string/add_tag">
            </Button>

            <Button
                android:id="@+id/btnVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:text="@string/version">
            </Button>

            <Button
                android:id="@+id/btnSilentime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:text="@string/silentime">
            </Button>

            <Button
                android:id="@+id/btnGetCid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:text="@string/getclientid">
            </Button>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="1"
                android:text="@string/exit">
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>